# sshh

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml  flake.nix  release-plz.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
doc/: demo.tape
samples/: dummy.cfg
src/: args.rs  lib.rs  main.rs
src/config/: mod.rs  parser.rs
src/ui/: mod.rs  stateful_list.rs
