[package]
name = "sshh"
authors = ["Denis BOURGE <bourge.denis@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
home = "0.5.5"
itertools = "0.11.0"
ratatui = "0.23.0"
syn = { version = "2.0.38", features = ["full"] }
thiserror = "1.0.49"
